# TEST-ON-JULE

python-starter-project/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATIONS.md  Makefile  OPERATIONS.md  README.md  SECURITY.md  pyproject.toml
python-starter-project/.github/ISSUE_TEMPLATE/: security.md
python-starter-project/.github/workflows/: ci.yml
python-starter-project/docs/: index.md  observability.md  onboarding.md
python-starter-project/src/python_starter_project/: __init__.py  __main__.py  cli.py  healthcheck.py  logging.py  math.py  settings.py
python-starter-project/tests/: conftest.py  test_healthcheck.py  test_logging.py  test_math.py  test_settings.py
yt-downloader-ui/: README.md  index.html  package-lock.json  package.json
yt-downloader-ui/src/: App.jsx  App.tsx  YouTubeDownloader.jsx  YouTubeDownloader.tsx  types.ts
yt-downloader-ui/src/api/: README.md  mock.js  mock.ts
yt-downloader-ui/src/components/: AnalysisSection.jsx  AnalysisSection.tsx  Header.jsx  Header.tsx  OptionsSection.jsx  OptionsSection.tsx  Overlays.jsx  Overlays.tsx  QueueSection.jsx  QueueSection.tsx  README.md  UI.jsx  UI.tsx  URLInputSection.jsx  URLInputSection.tsx
yt-downloader-ui/src/context/: AppContext.js  AppContext.tsx
yt-downloader-ui/src/hooks/: README.md  useAnalysis.ts  useDownloadOptions.ts  useLocalStorage.js  useLocalStorage.ts  useQueue.ts  useToasts.js  useToasts.ts  useUI.ts
yt-downloader-ui/src/utils/: README.md  index.js  index.ts  qaTests.js  qaTests.ts
